@@ -1,5 +1,12 @@
 2005-10-03  Christian Persch  <chpe@cvs.gnome.org>
 
+	* src/ephy-window.c: (setup_ui_manager), (ephy_window_dispose),
+	(ephy_window_finalize):
+
+	Fix memory leak.
+
+2005-10-03  Christian Persch  <chpe@cvs.gnome.org>
+
 	* embed/ephy-embed-shell.c: (ephy_embed_shell_dispose):
 	* src/ephy-shell.c: (ephy_shell_dispose):
 
